# programming-in-cpp-execises

./: .gitignore  README.MD
lab-1/: CMakeLists.txt  calc.cpp  hello.cpp  sum.cpp
lab-2/: .gitignore  CMakeLists.txt  IntegerMatrix.cpp  IntegerMatrix.hpp  README.MD  main.cpp  matrix_test.cpp
